Fix extra space under pseudo-element in current-page

--- a/css/style.css
+++ b/css/style.css
@@ -88,23 +88,21 @@ main {
     gap: 40px;
 }
 
-.header-item {
-    padding: 24px 0;
-}
-
-.header-item:first-child .header-link{
+.current-page{
     position: relative;
     color: #404bbf; 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link {
+    display: block;
     padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42; 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -112,7 +110,7 @@ main {
     color: #404bbf;
 }
 
-.header-item:first-child .header-link::after {
+.current-page::after {
     position: absolute;
     content: "";
     left: 0;
@@ -128,21 +126,10 @@ main {
 
 /* address-part */
 
-.address {
-    font-style: normal;
-}
-
 .header-contact {
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
+    font-weight: 400;
+    font-style: normal;
     color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-contact:hover,
-.header-contact:focus {
-    color: #404bbf;
 }
 
 /* promo section */
